--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # This is a development database and is NOT meant for production.
   database:
     container_name: QA-Database
-    image: mysql:latest
+    image: mysql:8
     restart: always
     environment:
       MYSQL_DATABASE: 'qa_platform'
