--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,38 +2,38 @@ version: "3.8"
 
 # This is a development docker compose file and is NOT meant for production.
 services:
-  database:
-    container_name: QA-Database
-    image: mysql:8
-    restart: on-failure
+  db:
+    container_name: Postgres-DB
+    image: postgres:13
+    restart: always
     environment:
-      MYSQL_DATABASE: 'qa_platform'
-      MYSQL_USER: 'admin'
-      MYSQL_PASSWORD: 'qa-password'
-      MYSQL_ROOT_PASSWORD: 'qa-password'
+      POSTGRES_DB: 'qa_platform'
+      POSTGRES_USER: 'admin'
+      POSTGRES_PASSWORD: 'qa-password'
     healthcheck:
-      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
-      timeout: 10s
-      retries: 7
+      test: [ "CMD-SHELL", "pg_isready -U admin -d qa_platform" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
     ports:
-      - "3306:3306"
+    - "5432:5432"
     volumes:
-      - my-db:/var/lib/mysql
+    - pg-db:/var/lib/postgresql/data
 
   api:
     container_name: Open-Stage
-    image: open-stage:1.0
+    image: open-stage:1.1
     environment:
-      DATABASE_PORT: '3306'
+      DATABASE_PORT: '5432'
       DATABASE_NAME: 'qa_platform'
       DATABASE_USERNAME: 'admin'
       DATABASE_PASSWORD: 'qa-password'
-      DATABASE_ADDRESS: database
+      DATABASE_ADDRESS: db
     depends_on:
-      database:
+      db:
         condition: service_healthy
     ports:
       - "8080:8080"
 
 volumes:
-  my-db:
+  pg-db:
