--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,10 @@ services:
     - pg-db:/var/lib/postgresql/data
 
   api:
+    build:
+      dockerfile: Dockerfile
+      context: .
     container_name: Open-Stage
-    image: open-stage:1.1
     environment:
       DATABASE_PORT: '5432'
       DATABASE_NAME: 'qa_platform'
