--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     - "5432:5432"
     volumes:
     - pg-db:/var/lib/postgresql/data
+    # Copy database schema file.
+    - ./_sql/schema.sql:/docker-entrypoint-initdb.d/schema.sql
 
   api:
     build:
