--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.15
 
     - name: Build Go App
-      run: go build -v ./...
+      run: go build -v ./backend/...
 
     - name: Test Go App
-      run: go test -v ./...
+      run: go test -v ./backend/...
