--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,10 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "../../../../../../Desktop/Programming/learn-react/node_modules/.bin/react-scripts start",
-    "build": "../../../../../../Desktop/Programming/learn-react/node_modules/.bin/react-scripts build",
-    "test": "../../../../../../Desktop/Programming/learn-react/node_modules/.bin/react-scripts test",
-    "eject": "../../../../../../Desktop/Programming/learn-react/node_modules/.bin/react-scripts eject"
+    "start": "./node_modules/.bin/react-scripts start",
+    "build": "./node_modules/.bin/react-scripts build",
+    "test": "./node_modules/.bin/react-scripts test",
+    "eject": "./node_modules/.bin/react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
