--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-react",
+  "name": "open-stage",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,10 +13,11 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "./node_modules/.bin/react-scripts start",
-    "build": "./node_modules/.bin/react-scripts build",
-    "test": "./node_modules/.bin/react-scripts test",
-    "eject": "./node_modules/.bin/react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "prod": "set REACT_APP_ENV=production&& react-scripts start"
   },
   "eslintConfig": {
     "extends": [
