--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prod": "set REACT_APP_ENV=production&& react-scripts start"
+    "prod": "REACT_APP_ENV=production npm start"
   },
   "eslintConfig": {
     "extends": [
