--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     volumes:
     - pg-db:/var/lib/postgresql/data
     # Copy database schema file.
-    - ./_sql/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+    - ./docs/sql/schema.sql:/docker-entrypoint-initdb.d/schema.sql
 
   api:
     build:
