--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prod": "REACT_APP_ENV=production npm start"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
